fix menu item clipping and fit everything in one viewport

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -16,16 +16,16 @@
 		top: 0;
 		width: 94vw;
 		height: 100vh;
-		gap: 2vh;
-		padding: 10vh 0 10vh 12.56vh;
+		gap: 1.5vh;
+		padding: 8vh 0 8vh 12.56vh;
 		border-left: 1px solid #000;
 	}
 	@include media("<=mobile") {
 		left: 0;
 		width: 100vw;
 		height: calc(100% - 3.75rem);
-		gap: 1.25rem;
-		padding: 5rem 0 5rem 1.5rem;
+		gap: 1rem;
+		padding: 4rem 0 4rem 1.5rem;
 		border-top: 1px solid #000;
 	}
 }
@@ -34,7 +34,7 @@
 	height: 115%;
 	cursor: pointer;
 	width: fit-content;
-	font: 600 9vh/98.49% "New York Extra Large", serif;
+	font: 600 8vh/98.49% "New York Extra Large", serif;
 	color: transparent;
 
 	@include media(">mobile") {
@@ -44,7 +44,7 @@
 		-webkit-text-stroke: 1.5px rgb(0, 0, 0);
 	}
 	@include media("<=mobile") {
-		font-size: 2.75rem;
+		font-size: 2.5rem;
 		white-space: nowrap;
 		letter-spacing: -0.03em;
 		text-stroke: 1px rgb(0, 0, 0);
